# baobab-barcode

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 01_specifications.md  dev_diary.md  public_api_contract.md  release_checklist.md  versioning_policy.md
docs/features/: 01_project_bootstrap.md  02_domain_models_and_enums.md  03_exceptions_hierarchy.md  04_payload_validation_service.md  05_generation_ports_and_core_service.md  06_code128_generation_backend.md  07_qrcode_generation_backend.md  08_reader_ports_and_core_service.md  09_decode_backend_integration.md  10_public_facade_and_examples.md  11_test_quality_and_ci_hardening.md  12_release_readiness.md
docs/tests/coverage/: README.md
examples/: README.md  basic_usage.py
src/baobab_barcode/: __init__.py  _public_api.py
src/baobab_barcode/api/: __init__.py  barcode_api.py
src/baobab_barcode/application/: __init__.py
src/baobab_barcode/application/ports/: __init__.py  barcode_generator.py  barcode_reader.py
src/baobab_barcode/application/services/: __init__.py  barcode_generation_service.py  barcode_generator_registry.py  barcode_read_service.py  payload_normalization_service.py  payload_validation_service.py
src/baobab_barcode/application/validators/: __init__.py  code128_payload_validator.py  payload_validation_helpers.py  payload_validator.py  qr_code_payload_validator.py
src/baobab_barcode/domain/: __init__.py
src/baobab_barcode/domain/enums/: __init__.py  barcode_format.py
src/baobab_barcode/domain/results/: __init__.py  decode_result.py  generated_barcode.py  validation_result.py
src/baobab_barcode/domain/value_objects/: __init__.py  barcode_generation_options.py  barcode_read_options.py
src/baobab_barcode/exceptions/: __init__.py  baobab_barcode_exception.py  barcode_decoding_exception.py  barcode_rendering_exception.py  barcode_validation_exception.py  invalid_barcode_value_exception.py  unsupported_barcode_format_exception.py
src/baobab_barcode/infrastructure/: __init__.py
src/baobab_barcode/infrastructure/generation/: __init__.py  code128_png_barcode_generator.py  default_registry.py  qrcode_png_barcode_generator.py
src/baobab_barcode/infrastructure/reading/: __init__.py  default_reader_registry.py  png_zbar_barcode_reader.py
tests/: __init__.py  test_application_public_exports_smoke.py  test_domain_public_exports_smoke.py  test_exceptions_public_exports_smoke.py  test_infrastructure_public_exports_smoke.py  test_public_facade_smoke.py  test_smoke.py  test_smoke_import.py
tests/baobab_barcode/: __init__.py
tests/baobab_barcode/api/: __init__.py  test_barcode_api.py  test_barcode_api_module.py  test_decode_facade.py  test_facade_end_to_end.py  test_generate_facade.py  test_public_facade_exports.py  test_validate_payload_facade.py
tests/baobab_barcode/application/ports/: __init__.py  test_barcode_generator.py  test_barcode_reader.py
tests/baobab_barcode/application/services/: __init__.py  test_barcode_generation_service.py  test_barcode_generator_registry.py  test_barcode_read_service.py  test_payload_normalization_service.py  test_payload_validation_service.py
tests/baobab_barcode/application/validators/: __init__.py  test_code128_payload_validator.py  test_payload_validation_helpers.py  test_payload_validator.py  test_qr_code_payload_validator.py
tests/baobab_barcode/domain/enums/: __init__.py  test_barcode_format.py
tests/baobab_barcode/domain/results/: __init__.py  test_decode_result.py  test_generated_barcode.py  test_validation_result.py
tests/baobab_barcode/domain/value_objects/: __init__.py  test_barcode_generation_options.py  test_barcode_read_options.py
tests/baobab_barcode/exceptions/: __init__.py  test_baobab_barcode_exception.py  test_barcode_decoding_exception.py  test_barcode_rendering_exception.py  test_barcode_validation_exception.py  test_invalid_barcode_value_exception.py  test_unsupported_barcode_format_exception.py
tests/baobab_barcode/infrastructure/: __init__.py
tests/baobab_barcode/infrastructure/generation/: __init__.py  code128_generation_test_helpers.py  qrcode_generation_test_helpers.py  test_code128_integration_with_core_service.py  test_code128_png_barcode_generator.py  test_qrcode_font_fallback.py  test_qrcode_integration_with_core_service.py  test_qrcode_png_barcode_generator.py
tests/baobab_barcode/infrastructure/reading/: __init__.py  png_zbar_read_test_helpers.py  test_default_reader_registry.py  test_png_zbar_barcode_reader.py  test_png_zbar_round_trip.py
tests/contract/: conftest.py  test_decode_backend_contract.py  test_documented_exceptions_contract.py  test_facade_signatures_contract.py  test_result_types_contract.py  test_root_import_contract.py  test_round_trip_public_contract.py
